hphp/test/zend/good/ext/standard/tests/file/is_writable_variation3.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (substr(PHP_OS, 0, 3) != 'WIN') {
  // Skip if being run by root (files are always readable, writeable and executable)
  if (posix_geteuid() == 0) {
    die('skip cannot be run as root');
  }
}
}
