hphp/test/zend/bad/ext/opcache/tests/blacklist-win32.php.skipif
<?php require_once('skipif.inc'); ?>
<?php if (substr(PHP_OS, 0, 3) != 'WIN') {  die('skip only for Windows'); } ?>